# alignopt

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/alignopt/: types.py
src/alignopt/backends/: backends_config.py  backends_types.py  backends_validation.py  text.py  validation.py
src/alignopt/backends/jax/: logprobs.py
src/alignopt/backends/jax/dpo/: dpo_loss_jax.py  dpo_validation_jax.py  logprobs_jax.py
src/alignopt/backends/torch/: logprobs.py
src/alignopt/backends/torch/dpo/: dpo_loss_torch.py  dpo_training_torch.py  dpo_validation_torch.py  logprobs_torch.py  torch_dpo_types.py
src/alignopt/data/: data_config.py  formats.py  loaders.py
tests/: test_dpo_loss_parity.py
tests/backends/: test_text.py
tests/backends/test_torch/: test_logprobs.py
tests/test_backends/: backend_testing_tools.py  test_text.py
tests/test_backends/test_jax/: test_dpo_loss_jax.py  test_logprobs_jax.py
tests/test_backends/test_torch/: test_dpo_loss_torch.py  test_logprobs_torch.py
tests/test_data/: test_loaders.py
