[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "alignopt"
version = "0.1.0"
description = "Preference-optimization toolkit with PyTorch + JAX backends."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Dor Fuchs" }]
dependencies = [
  "numpy>=1.26",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "rich>=13.7",
  "safetensors>=0.4.3",
]

[project.optional-dependencies]
torch = [
  "torch>=2.2"
]
jax = [
  "jax>=0.4.28",
  "flax>=0.8.4",
  "optax>=0.2.2",
  "orbax-checkpoint>=0.6.4",
  "chex>=0.1.86",
]
hf = [
  "transformers>=4.41",
  "datasets>=2.20",
  "accelerate>=0.33",
  "tokenizers>=0.20",
  "evaluate>=0.4.2",
]
dev = [
  "pytest>=8.2",
  "pytest-xdist>=3.6",
  "ruff>=0.5.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alignopt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
